tests/Front/SemanticError/06_FunctionDoesNotExist.c
void main() {
    int32_t a;
    a = 1;
    function();
}
